--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -203,7 +203,8 @@ aside.hero-phone {
   padding: 4rem 5%;
   /* Background pattern sayuran (tanpa orang) */
   background-color: #ff9a4a;
-  background-image: url("./asset/img/vegetable-pattern.png"); /* Pattern sayuran saja */
+  background-image: url("https://ranggautama47.github.io/Submision-Dicoding-website/asset/img/vegetable-pattern.png");
+ /* Pattern sayuran saja */
   background-size: auto;
   background-repeat: repeat;
   background-position: center;
