--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -231,11 +231,12 @@ aside.hero-phone {
 
 .features-image img {
   width: 100%;
-  max-width: 500px;
+  max-width: 800px;
   height: auto;
   object-fit: contain;
   -webkit-user-drag: none;
   user-select: none;
+  transform: scale(1.5);
 }
 
 .features-image:hover {
@@ -1599,4 +1600,25 @@ body {
   .hamburger.open span:nth-child(3) {
     transform: translateY(-9px) rotate(-45deg);
   }
+}
+
+/* Tambahkan ini di untuk firefox agar img tidakbisa di drag */
+.app-button, 
+.app-button img,
+.cta-button-wa,
+.cta-button-wa img,
+.cta-button,
+.cta-button img,
+.phone-mockup,
+.features-image img,
+.benefits-image img,
+.trust-image img,
+.about-logo img,
+.kemitraan-image img,
+.footer-illustration img,
+.logo-icon img {
+
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+
 }
