--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1622,5 +1622,9 @@ body {
   -webkit-tap-highlight-color: transparent;
   -moz-user-select: none;
   user-select: none;
+}
 
+img {
+  -moz-user-select: none;
+  user-select: none;
 }
